--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.4",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
+    "@angular/material": "^17.0.4",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
@@ -26,6 +28,7 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "ngx-infinite-scroll": "^17.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.2",
     "tslib": "^2.3.0",
